refactor: Revamp application structure and metadata
This commit introduces several key changes to refactor the application's structure and update its metadata.

- **Project Renaming:** The project name in `package.json` has been updated from "freezone---프리랜서-보호-플랫폼" to "freezone---가장-쉬운-링크-계약" to better reflect the core functionality.
- **Metadata Update:** The `metadata.json` file now uses the new project name and a more concise description emphasizing the ease of link-based contracts.
- **Navigation Refinement:** The `Tab` enum in `types.ts` has been renamed from `Page` to `Tab` for clarity and expanded to encompass all navigation items. The `Curation` tab has been renamed to `성장 가이드` to align with the new branding.
- **Navigation Constants:** `NAV_TABS` in `constants.ts` has been simplified by removing the explicit listing of tabs, allowing them to be dynamically generated from the `Tab` enum.
- **Component Simplification:** The `App.tsx` component has been significantly refactored. It now uses `useRef` for scrolling to specific sections (like contracts) and has simplified the rendering logic. It no longer directly imports and renders all page components.
- **Header and Footer Updates:** The `Header.tsx` and `Footer.tsx` components have been updated to utilize the new scrolling functionality via `onGoToHome` and `onGoToContract` props, and the navigation logic has been streamlined. The `Header` component now filters out the `Home` tab from its navigation links. The `Footer` component has been re-architected to simplify its layout and remove unused link structures.
- **Landing Page Enhancements:** The `LandingPage.tsx` component has been refactored to incorporate new icons and improve its structure for better integration with the new scrolling behavior. It now accepts `contractRef` and `onGoToContract` props.

These changes aim to create a more maintainable, scalable, and user-friendly application by centralizing navigation logic and improving the clarity of proje

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "freezone---프리랜서-보호-플랫폼",
+  "name": "freezone---가장-쉬운-링크-계약",
   "private": true,
   "version": "0.0.0",
   "type": "module",
