refactor: Update branding and color palette
Updates the application name, description, and primary color scheme to align with the brand's core offering and visual identity. This includes changes to package.json, metadata.json, and various UI components to reflect a more cohesive and professional look. The primary color has shifted from fuchsia to a more generic 'primary' designation, allowing for easier theming and consistency.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "freezone---가장-쉬운-링크-계약",
+  "name": "freezone---가장-쉬운-계약서-작성",
   "private": true,
   "version": "0.0.0",
   "type": "module",
